[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.10"
actix-cors = "0.6"
juniper = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.18.1", features = ["full"] }
mongodb = "2.1"
bson = "2"
once_cell = "1.10.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }